[tool.poetry]
name = "numpc"
version = "0.1.0"
description = ""
authors = ["dimarkov <5038100+dimarkov@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.10, <3.11"
jax = "^0.3.1"
numpyro = "^0.9.1"
flax = "^0.4.0"
jupyterlab = "^3.2.9"
tensorflow-datasets = "^4.5.2"
tensorflow = "^2.8.0"
optax = "^0.1.1"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
